fixed white-section mobile/desktop/tablet version

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,7 +28,6 @@ body {
 	overflow-x: hidden;
 }
 .wrapper {
-	// overflow-x: hidden;
 	width: 100%;
 	max-width: 1440px;
 }
@@ -163,7 +162,7 @@ body {
 				}
 				.flexActive {
 					display: flex;
-					animation: showBurger 2s ease-in forwards 
+					animation: showBurger 2s ease-in forwards;
 				}
 			}
 		}
@@ -259,6 +258,7 @@ body {
 	display: flex;
 	justify-content: center;
 	padding: 25px;
+	overflow-x: hidden;
 	.wrapper {
 		.white-section-items {
 			display: flex;
@@ -266,6 +266,7 @@ body {
 			flex-direction: column;
 			align-items: center;
 			text-align: center;
+
 			&--second {
 				padding: 40px 0px;
 			}
@@ -304,6 +305,7 @@ body {
 	text-align: center;
 	display: flex;
 	justify-content: center;
+	overflow-x: hidden;
 	&__bg-img {
 		border-top-right-radius: 90px;
 		border-bottom-left-radius: 90px;
@@ -326,8 +328,7 @@ body {
 			&__smartphones-img {
 				position: absolute;
 				top: -280px;
-				
-				
+
 				transform: scale(70%) translateX(-50%);
 			}
 			&__section-title {
@@ -384,30 +385,22 @@ body {
 			}
 		}
 	}
+	.attribution {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		width: 100%;
+		padding: 20px 0;
+		background-color: rgb(26, 26, 26);
+		font-size: 11px;
+		text-align: center;
+		color: $white-text;
+	}
+	.attribution p a {
+		color: orange;
+	}
 }
-.attribution {
-	padding: 20px 0;
-	background-color: rgb(26, 26, 26);
-	font-size: 11px;
-	text-align: center;
-	color: $white-text;
-}
-.attribution a {
-	color: $white-text;
-	margin-right: 30px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
 ///////////////////////////////////////////////////////
 // ----------- tablet / desktop version -----------
 ///////////////////////////////////////////////////////
@@ -450,6 +443,9 @@ body {
 
 @media (min-width: 576px) {
 	.footer {
+		.attribution {
+			flex-direction: row;
+		}
 		.wrapper {
 			.footer-item {
 				&__columns {
@@ -486,6 +482,8 @@ body {
 						background: none;
 						font-weight: bold;
 						color: $white-text;
+						cursor: pointer;
+						z-index: 100;
 						img {
 							margin-left: 5px;
 						}
@@ -588,9 +586,11 @@ body {
 }
 @media (min-width: 1200px) {
 	.dark-section {
+		margin-top: 0;
 		height: 450px;
 		position: relative;
 		&__smartphones-img {
+			z-index: 100;
 			position: absolute;
 			top: 55%;
 			left: 200px;
@@ -629,21 +629,21 @@ body {
 		padding: 25px;
 		.wrapper {
 			.white-section-items {
+				z-index: 2000;
 				position: relative;
 				display: grid;
 				grid-template-columns: 100px 1fr 100px 1fr 100px;
 				grid-template-rows: 200px 2fr;
-				padding-top: 80px;
-				&--second {
-					height: 850px;
-					padding: 40px;
-				}
+				// padding-top: 80px;
+				height: 850px;
+				margin-bottom: 0;
+				padding: 0px;
 				&__img {
 					position: absolute;
 					top: 24px;
 					right: -300px;
 					transform: scale(92%);
-					padding-bottom: 50px;
+					padding: 0;
 					&--second {
 						right: none;
 						left: -350px;
@@ -664,6 +664,7 @@ body {
 				&__text {
 					grid-column: 2/3;
 					text-align: left;
+					margin-bottom: 70px;
 					&--second {
 						grid-column: 4/5;
 						grid-row: 2/3;
